[gd_scene load_steps=5 format=3 uid="uid://bclo2wl8ibrcg"]

[ext_resource type="Script" uid="uid://npqs2m5g5bd6" path="res://menu/pause_menu.gd" id="1_inj1j"]

[sub_resource type="InputEventAction" id="InputEventAction_inj1j"]
action = &"ui_cancel"

[sub_resource type="InputEventAction" id="InputEventAction_vy7sn"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_lgp46"]
events = [SubResource("InputEventAction_inj1j"), SubResource("InputEventAction_vy7sn")]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_inj1j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 196.0
offset_bottom = 166.0

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_lgp46")
text = "Continue"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
